--- a/index.html
+++ b/index.html
@@ -3,5 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title> Alura books </title>
+    <link rel="stylesheet"href= "reset.css">
+    <link rel="stylesheet"href= "style.css">
 </head>
+<body>
+    <header class="cabeçalho">
+        <span class="cabeçalho_menu-hamburgue"> </span>
+        <img scr="img/Logo.svg"alt= "logo da alura books">
+        <a href="#"> <img scr="img/Favoritos.svg" alt="meus favoritos"> </a>
+        <a href="#"> <img scr="img/Compras.svg" alt="carrinho de compras"> </a>
+        <a href="#"> <img scr="img/Usuario.svg" alt="meu perfil"> </a>
+    </header>
+</body>
 </html>
