--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <header class="cabeçalho">
-        <span class="cabeçalho_menu-hamburgue"> </span>
-        <img src="img/Logo.svg"alt= "logo da alura books">
-        <a href="#"> <img src="img/Favoritos.svg" alt="meus favoritos"> </a>
-        <a href="#"> <img src="img/Compras.svg" alt="carrinho de compras"> </a>
-        <a href="#"> <img src="img/Usuario.svg" alt="meu perfil"> </a>
+        <div class="container">
+           <span class="cabeçalho_menu-hamburgue"> </span>
+           <img src="img/Logo.svg"alt= "logo da alura books">
+        </div>
+        <div class="container">
+           <a href="#"> <img src="img/Favoritos.svg" alt="meus favoritos"> </a>
+           <a href="#"> <img src="img/Compras.svg" alt="carrinho de compras"> </a>
+           <a href="#"> <img src="img/Usuario.svg" alt="meu perfil"> </a>
+    </div>
     </header>
 </body>
 </html>
