--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <header class="cabeçalho">
         <div class="container">
-           <span class="cabeçalho_menu-hamburgue"> </span>
+           <span class="cabeçalho_menu-hamburgue containr_imagem"> </span>
            <img src="img/Logo.svg"alt= "logo da alura books">
         </div>
         <div class="container">
-           <a href="#"> <img src="img/Favoritos.svg" alt="meus favoritos"> </a>
-           <a href="#"> <img src="img/Compras.svg" alt="carrinho de compras"> </a>
-           <a href="#"> <img src="img/Usuario.svg" alt="meu perfil"> </a>
+           <a href="#"> <img src="img/Favoritos.svg" alt="meus favoritos" class="container_imagem"> </a>
+           <a href="#"> <img src="img/Compras.svg" alt="carrinho de compras" class="container_imagem"> </a>
+           <a href="#"> <img src="img/Usuario.svg" alt="meu perfil" class="container_imagem"> </a>
     </div>
     </header>
 </body>
